--- a/index.html
+++ b/index.html
@@ -458,6 +458,7 @@
     const ROOTS_VARIANTS = ROOTS.map(normalizeRootItem);
     const ROOTS_MERGED_RAW = [{"root": "\u7592", "code": "ab"}, {"root": "\u4e01", "code": "ad"}, {"root": "\u31c6 \u4e5b\ue4cc\u2e84\u31d7\u4e5a\u30ff\u310b\u3105\ue4cd", "code": "ae"}, {"root": "\u4e30 \ue415\u9fb6\ue905", "code": "af"}, {"root": "\u7f36 \ue589", "code": "af"}, {"root": "\u9b3c", "code": "ag"}, {"root": "\u4e59", "code": "ai"}, {"root": "\u516d", "code": "al"}, {"root": "\u8012", "code": "al"}, {"root": "\u95e8", "code": "am"}, {"root": "\u76bf", "code": "am"}, {"root": "\u7247 \u723f\u4e2c\ue495\ue407\ue408", "code": "ap"}, {"root": "\u820c \ue429", "code": "as"}, {"root": "\u672a", "code": "aw"}, {"root": "\u5f13", "code": "bg"}, {"root": "\u4e42 \u3405\ue4b6", "code": "bi"}, {"root": "\u5f50 \ue4bd\ue459\u5f51\ue4bc", "code": "bj"}, {"root": "\ue479 \ue478", "code": "bk"}, {"root": "\u5375", "code": "bl"}, {"root": "\u536f \ue580", "code": "bm"}, {"root": "\u9762", "code": "bm"}, {"root": "\u5973", "code": "bn"}, {"root": "\u6c0f", "code": "bs"}, {"root": "\u807f \u8080\ue4c0\ue4c1\ue4bf", "code": "bv"}, {"root": "\u4e91 \ue4b5", "code": "by"}, {"root": "\u4e0d", "code": "cb"}, {"root": "\u866b \ue56b", "code": "cc"}, {"root": "\u98de", "code": "cf"}, {"root": "\u53e4", "code": "cg"}, {"root": "\u706b \ue4aa\ue4a8\ue4a9\u706c", "code": "ch"}, {"root": "\u652f", "code": "ci"}, {"root": "\u53ca", "code": "cj"}, {"root": "\u5c38 \ue42c\ue42a", "code": "cs"}, {"root": "\u4e1a", "code": "cy"}, {"root": "\u53e3 \u3007", "code": "dk"}, {"root": "\u91cc", "code": "dl"}, {"root": "\u6c11", "code": "dm"}, {"root": "\u9efe", "code": "dm"}, {"root": "\u65e0 \u65e1", "code": "du"}, {"root": "\u7531", "code": "dy"}, {"root": "\u5e72", "code": "eg"}, {"root": "\u89c1", "code": "ej"}, {"root": "\u6728 \u6729", "code": "em"}, {"root": "\u6b20", "code": "eq"}, {"root": "\u5f61 \ue4c4", "code": "es"}, {"root": "\ud840\udc89", "code": "et"}, {"root": "\u7a74 \ue400", "code": "ex"}, {"root": "\u4e5f", "code": "ey"}, {"root": "\u3840", "code": "fb"}, {"root": "\u8fb0", "code": "fc"}, {"root": "\u9aa8 \u518e", "code": "fg"}, {"root": "\u4e00 \u31c0", "code": "fi"}, {"root": "\u4e14", "code": "fq"}, {"root": "\u793a \u793b", "code": "fs"}, {"root": "\u4ea1 \u4ebe", "code": "fw"}, {"root": "\u6b79 \u6b7a\ue4dd", "code": "gd"}, {"root": "\u9ad8 \ue440\ue441\ue443", "code": "gg"}, {"root": "\u53e5", "code": "gj"}, {"root": "\u4e28 \u4e85", "code": "gs"}, {"root": "\u58eb", "code": "gs"}, {"root": "\u571f", "code": "gt"}, {"root": "\u97e6", "code": "gw"}, {"root": "\u7f8a \u2eb7\u2eb6\ue5ac\u8288", "code": "gy"}, {"root": "\u516b \u4e37\ue8eb\u4491\ue40e\u7676\ue524", "code": "hb"}, {"root": "\u592b", "code": "hf"}, {"root": "\u8c37 \ue5ad", "code": "hg"}, {"root": "\u5b50", "code": "hi"}, {"root": "\u5902 \u590a\ue8be", "code": "hi"}, {"root": "\u6535 \u6534", "code": "hp"}, {"root": "\u58f4 \ue82d", "code": "hu"}, {"root": "\u5fc3 \u5fc4\u2e97", "code": "hx"}, {"root": "\u518c \ue43a\ue43e", "code": "ic"}, {"root": "\u4e36 \u31cf", "code": "id"}, {"root": "\u826e \ue4d0", "code": "ig"}, {"root": "\u4e29", "code": "ij"}, {"root": "\u7acb \ue446", "code": "il"}, {"root": "\u821f", "code": "io"}, {"root": "\u7cf8 \u7e9f", "code": "is"}, {"root": "\u4e88", "code": "iv"}, {"root": "\u4e61", "code": "ix"}, {"root": "\u5e7a", "code": "iy"}, {"root": "\u6597", "code": "jd"}, {"root": "\u4ebc \u4ebd", "code": "ji"}, {"root": "\u4ed1 \u4f96", "code": "jl"}, {"root": "\u4eba \u4ebb", "code": "jr"}, {"root": "\u8c55 \ue460", "code": "js"}, {"root": "\u5165", "code": "ju"}, {"root": "\u5bf8", "code": "kc"}, {"root": "\u4ea5", "code": "kh"}, {"root": "\u382f", "code": "ki"}, {"root": "\u4e5d", "code": "kj"}, {"root": "\u6bcd", "code": "km"}, {"root": "\u6c34 \u6c35\u2e8d\ue48a\u6c3a\ue48b\ue48c\ue48d", "code": "ks"}, {"root": "\u53b6 \u9fb4\ue433", "code": "ks"}, {"root": "\u6bcb \u6bcc", "code": "ku"}, {"root": "\u8279 \u5efe\u4e0c\u8278", "code": "lc"}, {"root": "\u9f7f", "code": "lc"}, {"root": "\u800c", "code": "le"}, {"root": "\u65b9", "code": "lf"}, {"root": "\u5eff \u9fb7", "code": "ln"}, {"root": "\u5343", "code": "lq"}, {"root": "\u751f", "code": "ls"}, {"root": "\u5345 \ue410", "code": "ls"}, {"root": "\u5915", "code": "lx"}, {"root": "\u534c", "code": "lx"}, {"root": "\u7259", "code": "ly"}, {"root": "\u5df4", "code": "mb"}, {"root": "\u5927", "code": "md"}, {"root": "\u4e8c", "code": "me"}, {"root": "\u5149 \ue856", "code": "mg"}, {"root": "\u6237 \ue405", "code": "mh"}, {"root": "\u8c78", "code": "mi"}, {"root": "\u5182 \u51f5\u2e86\ue452\ue402", "code": "mk"}, {"root": "\u4e24", "code": "ml"}, {"root": "\u72ac \u72ad", "code": "mq"}, {"root": "\u77f3", "code": "ms"}, {"root": "\u752b", "code": "nf"}, {"root": "\u9b32", "code": "ng"}, {"root": "\u9ec4", "code": "nh"}, {"root": "\u52f9", "code": "nk"}, {"root": "\u531a \ue432\u30b3", "code": "nk"}, {"root": "\u9a6c", "code": "nm"}, {"root": "\u5341 \ud840\udc87\ue431", "code": "ns"}, {"root": "\u620a \ue44f\u6209", "code": "nu"}, {"root": "\u738b", "code": "nw"}, {"root": "\u8f9b", "code": "nx"}, {"root": "\u8d1d", "code": "ob"}, {"root": "\u5ddd \ue4e5\ue490\u5ddb\u5ddc", "code": "oc"}, {"root": "\u81ea", "code": "oi"}, {"root": "\u51e0 \u2e87\ue915", "code": "oj"}, {"root": "\u65e5 \u66f0\u2e9c\ue477", "code": "or"}, {"root": "\u77e2", "code": "os"}, {"root": "\u5c24 \u5c22", "code": "oy"}, {"root": "\u957f \u9578", "code": "pc"}, {"root": "\u5200 \u3022\u5202\u30ea\ue449\ue44d\ue44b\ue44c", "code": "pd"}, {"root": "\u513f \ue489\ue80e\ue863", "code": "pe"}, {"root": "\u6208 \ue450", "code": "pg"}, {"root": "\u9ed1 \ue8c3", "code": "ph"}, {"root": "\u5f0b", "code": "pi"}, {"root": "\u81fc \ue4c2", "code": "pj"}, {"root": "\u7c73 \ue5bc", "code": "pm"}, {"root": "\u9f20 \ue462", "code": "ps"}, {"root": "\u8db3 \u2eca", "code": "pu"}, {"root": "\u884c", "code": "px"}, {"root": "\u8d70", "code": "pz"}, {"root": "\u81e3 \ue472", "code": "qc"}, {"root": "\u8033", "code": "qe"}, {"root": "\u4e95 \ue417", "code": "qj"}, {"root": "\u8001 \u8002", "code": "ql"}, {"root": "\u76ee \ue858", "code": "qm"}, {"root": "\u725b \u725c\u2ea7", "code": "qn"}, {"root": "\u9f50", "code": "qq"}, {"root": "\u98df \u9963", "code": "qs"}, {"root": "\u7530", "code": "qt"}, {"root": "\u975e", "code": "rf"}, {"root": "\u4e4b", "code": "ri"}, {"root": "\u5dfe", "code": "rj"}, {"root": "\u56d7(\u6846)", "code": "rk"}, {"root": "\u4e86", "code": "rl"}, {"root": "\u76ae", "code": "rp"}, {"root": "\u4e03 \ue439\ue438", "code": "rq"}, {"root": "\u6bb3", "code": "rs"}, {"root": "\u7af9 \u2eae\ue4a1", "code": "ru"}, {"root": "\u74e6", "code": "rw"}, {"root": "\u53c8 \u30b9", "code": "ry"}, {"root": "\u5c6e \ue413\ue4cf\ue414\ue830", "code": "sc"}, {"root": "\u5404", "code": "sg"}, {"root": "\u6b62 \ue870\ue46f\u9fb0", "code": "si"}, {"root": "\u7532", "code": "sj"}, {"root": "\u529b", "code": "sl"}, {"root": "\u5c1a \ue4a6\u9fb8", "code": "ss"}, {"root": "\u8a00 \u8ba0", "code": "sy"}, {"root": "\u961d", "code": "te"}, {"root": "\u5f17 \ud848\udfa8\ud840\udc94", "code": "tf"}, {"root": "\u9769", "code": "tg"}, {"root": "\u8863 \u8864\ue4c5\ue4c8\ue4c7", "code": "ti"}, {"root": "\u65a4 \ue455", "code": "tj"}, {"root": "\u9f99", "code": "tl"}, {"root": "\u4e3f \u31d2", "code": "tp"}, {"root": "\u758b \ud853\udd13\u2eaa", "code": "ts"}, {"root": "\u4e09", "code": "ts"}, {"root": "\u96e8 \u2ed7", "code": "tv"}, {"root": "\u7528 \ue47c", "code": "ty"}, {"root": "\u767d", "code": "ub"}, {"root": "\u8fb6", "code": "uc"}, {"root": "\u5de5", "code": "ug"}, {"root": "\u96b9", "code": "ui"}, {"root": "\u624b \u624c\u9fb5\ue4e9\ue42f\ue430\ue4ba", "code": "us"}, {"root": "\u5ef4", "code": "uy"}, {"root": "\u5315 \ue498\ue497\ue5c5", "code": "vb"}, {"root": "\u5df2", "code": "vi"}, {"root": "\u5df1 \ue4d5", "code": "vj"}, {"root": "\u3404 \ue46b", "code": "vk"}, {"root": "\u6bdb", "code": "vm"}, {"root": "\u4e43 \ue592", "code": "vn"}, {"root": "\u6c14", "code": "vq"}, {"root": "\u79b8 \u2f71", "code": "vr"}, {"root": "\u5c71", "code": "vs"}, {"root": "\u5df3", "code": "vs"}, {"root": "\u6587", "code": "vw"}, {"root": "\u897f \u8980", "code": "vx"}, {"root": "\u6708 \u2e9d\ue41c\ue422\ue420", "code": "vy"}, {"root": "\u4e4d", "code": "wa"}, {"root": "\u51ab \ue48f\u2e80", "code": "wb"}, {"root": "\u5f73 \u4e8d", "code": "wc"}, {"root": "\u5b80 \u5196", "code": "wg"}, {"root": "\u9f9f", "code": "wg"}, {"root": "\u5154 \ue464", "code": "wt"}, {"root": "\u4e94", "code": "wu"}, {"root": "\u9c7c \ud867\udd4b", "code": "wv"}, {"root": "\u8c61", "code": "wx"}, {"root": "\u9875 \u9801\ue532\ue4de", "code": "wy"}, {"root": "\u5382 \u2e81", "code": "xc"}, {"root": "\u2e88 \ue488\ue4e4", "code": "xd"}, {"root": "\u5e7f", "code": "xg"}, {"root": "\u79be \ue748", "code": "xh"}, {"root": "\u9e7f", "code": "xl"}, {"root": "\u9e1f \ue45e", "code": "xn"}, {"root": "\u675f", "code": "xs"}, {"root": "\u4e4c", "code": "xu"}, {"root": "\u97f3", "code": "xy"}, {"root": "\u722a \u722b", "code": "ya"}, {"root": "\u535c \u2e8a", "code": "yb"}, {"root": "\u8f66 \ue46e\u8eca", "code": "yc"}, {"root": "\u74dc", "code": "yg"}, {"root": "\u81f3", "code": "yi"}, {"root": "\u66f2", "code": "yq"}, {"root": "\u56db \u7f52", "code": "ys"}, {"root": "\u5c0f \u2e8c\ue4b4\ud846\udf54", "code": "yx"}, {"root": "\u9149", "code": "yy"}, {"root": "\u8c46", "code": "zd"}, {"root": "\u7518 \ue499", "code": "zg"}, {"root": "\u864e \u864d", "code": "zh"}, {"root": "\u91d1 \u9485\ue456", "code": "zj"}, {"root": "\u5369 \u3117\u2e8b\ue4d1", "code": "zj"}, {"root": "\u53ef \ue8e0", "code": "zk"}, {"root": "\u9ebb", "code": "zm"}, {"root": "\u8eab \u3406", "code": "zs"}, {"root": "\u4ea0", "code": "zt"}, {"root": "\u7fbd", "code": "zv"}, {"root": "\u4e60", "code": "zx"}];
     const ROOTS_MERGED = ROOTS_MERGED_RAW.map(normalizeRootItem);
+    const { mergedToVariants, variantToMerged } = buildRootMappings();
 
     const rootChar = document.getElementById('rootChar');
     const codeInput = document.getElementById('codeInput');
@@ -523,6 +524,73 @@
 
     function normalizeRootItem(item) {
       return { root: normalizeRootLabel(item.root), code: item.code };
+    }
+
+    function normalizeMatch(value) {
+      return value.replace(/\s+/g, '');
+    }
+
+    function buildRootMappings() {
+      const mergedToVariants = Array.from({ length: ROOTS_MERGED.length }, () => []);
+      const variantToMerged = Array(ROOTS_VARIANTS.length).fill(-1);
+      const mergedByCode = new Map();
+
+      ROOTS_MERGED.forEach((item, idx) => {
+        const list = mergedByCode.get(item.code) || [];
+        list.push({ idx, root: normalizeMatch(item.root) });
+        mergedByCode.set(item.code, list);
+      });
+
+      ROOTS_VARIANTS.forEach((item, vIdx) => {
+        const list = mergedByCode.get(item.code);
+        if (!list) return;
+        const vRoot = normalizeMatch(item.root);
+        const match = list.find((entry) => entry.root.includes(vRoot));
+        if (!match) return;
+        variantToMerged[vIdx] = match.idx;
+        mergedToVariants[match.idx].push(vIdx);
+      });
+
+      return { mergedToVariants, variantToMerged };
+    }
+
+    function getCompletedIndices() {
+      return order.slice(0, currentIndex);
+    }
+
+    function mapCompletedToMerged(completedVariants) {
+      const mergedSet = new Set();
+      completedVariants.forEach((vIdx) => {
+        const mergedIdx = variantToMerged[vIdx];
+        if (mergedIdx >= 0) mergedSet.add(mergedIdx);
+      });
+      return mergedSet;
+    }
+
+    function mapCompletedToVariants(completedMerged) {
+      const variantSet = new Set();
+      completedMerged.forEach((mIdx) => {
+        const list = mergedToVariants[mIdx] || [];
+        list.forEach((vIdx) => variantSet.add(vIdx));
+      });
+      return variantSet;
+    }
+
+    function buildOrderWithCompleted(completedSet) {
+      const totalItems = activeRoots.length;
+      const completed = [];
+      completedSet.forEach((idx) => {
+        if (idx >= 0 && idx < totalItems) completed.push(idx);
+      });
+      completed.sort((a, b) => a - b);
+
+      const remaining = [];
+      for (let i = 0; i < totalItems; i += 1) {
+        if (!completedSet.has(i)) remaining.push(i);
+      }
+      shuffle(remaining);
+      order = completed.concat(remaining);
+      currentIndex = completed.length;
     }
 
     function normalizeInput(value) {
@@ -606,9 +674,16 @@
 
     function setMode(nextMode) {
       if (nextMode === mode) return;
+      const completed = getCompletedIndices();
+      let targetCompleted = new Set();
+      if (mode === 'all' && nextMode === 'merged') {
+        targetCompleted = mapCompletedToMerged(completed);
+      } else if (mode === 'merged' && nextMode === 'all') {
+        targetCompleted = mapCompletedToVariants(completed);
+      }
       mode = nextMode;
       activeRoots = mode === 'merged' ? ROOTS_MERGED : ROOTS_VARIANTS;
-      buildOrder();
+      buildOrderWithCompleted(targetCompleted);
       renderQuestion();
       updateModeButtons();
     }
