Shift app layout upward

--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       width: min(980px, 95vw);
       display: grid;
       gap: 20px;
+      transform: translateY(-24px);
     }
 
     header {
