Scale and shift layout

--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
       width: min(980px, 95vw);
       display: grid;
       gap: 20px;
-      transform: translateY(-24px);
+      transform: translateY(-48px) scale(1.15);
+      transform-origin: top center;
     }
 
     header {
